# bindgen

./: .clang-format  CMakeLists.txt  build.py  def.h  main.c  run.py  test.h
.cache/clangd/index/: all.h.BB1EF71FE8970F2F.idx  def.h.88D537F230C05BC6.idx  def.h.F6954A3AA985FE0C.idx  def.h.FB2F325DC163C9B9.idx  file.c.D10CAF7D840EB6FB.idx  function.c.AF86CDE054E4722B.idx  internal.h.9DB265EC88F4D889.idx  main.c.A9A0712357FFC8FB.idx  main.c.F3357B9EFE143328.idx  parse.c.D4043AA4A15DFF4C.idx  pub.h.0A11F8A423C3EE9A.idx  struct.c.EFB26A0CBEECCD17.idx
example/: bindgentest.h  def.h  resource.h
src/: CMakeLists.txt  main.c
src/common/: all.h  def.h
src/parse/: CMakeLists.txt  def.h  file.c  function.c  internal.h  parse.c  preprocessor.c  pub.h  struct.c
